[package]
name = "mem3u8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
bytes = "1.6.0"
chrono = "0.4.37"
flate2 = "1.0.28"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
au = { git = "http://github.com/wavey-ai/au.git" }
